--- a/src/components/ParticipantCard/ParticipantCard.scss
+++ b/src/components/ParticipantCard/ParticipantCard.scss
@@ -39,10 +39,9 @@ $base: 150px;
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border:1px solid #692b2b;
 }
 .border-list{
-    width: calc(1.5 * $base);
+    width: calc(2 * $base);
     border-radius: 30px;
     min-height: 200px;
     padding: 2px;
@@ -52,9 +51,116 @@ $base: 150px;
     box-shadow: -7px 7px 15px rgba(0, 0, 0, 0.3);
 }
 .list-participant {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 100%;
     border-radius: 30px;
     background: -webkit-linear-gradient(90deg, #ffffff,#dcdcdc);
     background: linear-gradient(90deg, #ffffff,#dcdcdc);
+    padding: 20px;
+    padding-top: calc(($base / 2) + 10px);
+
+
+}
+
+.name-participant{
+color: silver;
+font-size: 25px;
+font-weight: 700;
+font-style: italic;
+text-shadow: -2px 2px 2px rgb(3, 3, 3);
+margin-bottom: 50px;
+}
+.list-curse {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+}
+.list-item{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.image-curse{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+.name-count-curse {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.name-curse{
+color: rgb(70, 3, 58);
+    font-size: 20px;
+    font-weight: 700;
+}
+.count-curse{
+    display: flex;
+    gap: 5px;
+    div {
+        height: 5px;
+        width: 100%;
+        border: 1px solid rgb(155, 152, 152);
+        border-radius: 5px;
+        background: rgb(255, 255, 255);
+        box-shadow: -2px 2px 2px rgb(75, 75, 75);
+    }
+}
+.button-curse {
+    width: 30px;
+    border-radius: 50%;
+}
+
+
+
+
+
+.button-curse {
+  align-items: center;
+  appearance: none;
+  background-color: #99999b;
+  border-radius: 50%;
+  border-width: 0;
+  box-shadow: rgba(0, 0, 0, 0.4) 0 2px 2px,rgba(0, 0, 0, 0.3) 0 7px 13px -3px;
+  box-sizing: border-box;
+  color: #e7e4e7;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 30px;
+  width: 30px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  transition: background-color 0.15s ease;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-curse:hover {
+    background-color: #ffffff;
+    color: #838083;
+  box-shadow: rgba(0, 0, 0, 0.4) -2px 4px 8px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px;
+  transform: translateY(-2px);
+}
+
+.button-curse:active {
+    
+  box-shadow: #a8a8a8 3px 3px 17px inset;
+  transform: translateY(2px);
 }
